# a2a-gateway

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_EN.md  README_with_badges.md  SECURITY.md  VISION.md  a2a_gateway_cli.py  badges.md  build.sh  gitignore  ignore.txt  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py
.github/: DISCUSSION_TEMPLATE_agent_directory.yml  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: how_to_create_your_first_a2a_agent.md  how_to_federate_with_other_agents.md  how_to_publish_langchain_adapter.md  index.md  readme.md
examples/: task.json  task_via_cli.sh  task_via_curl.sh
tests/: agent_card.json  demo_agent.py  test_cli.py  test_mocked.py
